adding basic speech support
Built in response to https://developer.ibm.com/answers/questions/254586/service-interconnected-speech-to-text-dialog-text.html?utm_campaign=answers&utm_medium=email&utm_source=answers-new-question&utm_content=answers-answer-question

--- a/manifest.yml
+++ b/manifest.yml
@@ -2,11 +2,19 @@ declared-services:
   dialog-service:
     label: dialog
     plan: standard
+  stt-service:
+      label: speech_to_text
+      plan: standard
+  tts-service:
+      label: text_to_speech
+      plan: standard
 applications:
 - services:
   - dialog-service
-  name: dialog-nodejs
-  command: node app.js
+  - stt-service
+  - tts-service
+  name: speech-dialog
+  command: npm start
   path: .
   memory: 512M
   env:
