--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "body-parser": "~1.14.1",
     "dotenv": "^2.0.0",
     "errorhandler": "~1.4.1",
-    "express": "~4.13.3",
+    "express": "^4.13.4",
+    "express-secure-only": "^0.2.1",
     "request": "^2.67.0",
     "vcap_services": "^0.1.7",
     "watson-developer-cloud": "~1.0.6"
