--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "url": "https://github.com/watson-developer-cloud/dialog-nodejs/issues"
   },
   "scripts": {
-    "start": "DEBUG=express:* node app.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "async": "^1.5.1",
